# ai-collaborative-dungeon-master

./: .gitignore  README.md  package-lock.json  package.json  playwright_e2e.js
backend/: alembic.ini  auth_test.db  package.json  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 1f1344a2017f_create_world_tables.py  202607070001_create_auth_tables.py  202607070002_create_room_tables.py  202607070003_add_room_player_ready.py  8c06e256ed21_index_game_states_location_id.py  aed4a54fe948_create_character_table.py  b6893b15bcdb_create_npc_tables.py  b9d9a1747d9b_create_game_tables.py
backend/app/: __init__.py  config.py  main.py  middleware.py
backend/app/ai/: gemini_service.py  prompt_builder.py  test_ai_dm.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  game.py  health.py  npc_routes.py  rooms.py  story.py  world_routes.py
backend/app/database/: base.py
backend/app/game_engine/: action_batcher.py  game_engine.py  test_game_engine.py  test_npc_dm.py  test_world_gen.py  world_generator.py
backend/app/models/: __init__.py  character.py  game_event.py  game_state.py  npc.py  player_action.py  room.py  story_history.py  user.py  world.py
backend/app/schemas/: auth.py  character.py  game.py  npc.py  room.py
backend/app/services/: auth_service.py  context_service.py  game_service.py  room_service.py
backend/app/socket/: server.py
backend/app/utils/: auth.py  security.py
docs/: ARCHITECTURE.md
frontend/: eslint.config.mjs  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+24 files in other folders)
