[project]
name = "ai-collaborative-dungeon-master-backend"
version = "0.1.0"
description = "FastAPI backend for the AI Collaborative Dungeon Master."
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.16.4",
  "asyncpg>=0.30.0",
  "bcrypt>=4.1.0",
  "email-validator>=2.2.0",
  "fastapi>=0.116.0",
  "google-genai>=1.26.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.1",
  "python-jose[cryptography]>=3.5.0",
  "python-multipart>=0.0.20",
  "python-socketio[asgi]>=5.13.0",
  "sqlalchemy[asyncio]>=2.0.41",
  "uvicorn[standard]>=0.35.0"
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21.0",
  "httpx>=0.28.1",
  "mypy>=1.16.1",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.0.0",
  "ruff>=0.12.3"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
